--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
   </head>
 
   <body>
+    <form action="http://localhost:3000/dogs" method="POST">
+      <label> Name: <input type="text" name="Name" id="Amelia" /></label
+      ><br />
+      <label> email: <input type="text" name="email" id="amelia.awuor@gmail.com" /></label
+      ><br />
+      <input type="submit" id="submit" value="Submit" />
+    </form>
+    
     <script src="index.js"></script>
   </body>
 
